# -mcs-modern-agent-analyser

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  rxconfig.py
tests/: test_counter.py
web/: components.py  mermaid.py  state.py  web.py
