[project]
name = "agent-analyser-modern"
version = "0.1.0"
description = "Analyser for modern Copilot Studio agents (cliagent) — parses the agent build YAML and modern conversation transcripts to surface tool/knowledge usage, reasoning, groundedness and instruction compliance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "reflex>=0.9.5.post2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
